[package]
name = "sql-on-rocks"
version = "0.1.0"
authors = ["ivz hh"]
edition = "2018"

[lib]
name = "sql_on_rocks"
test = true

[dependencies]
rocksdb = { path = "./rust-rocksdb" }
serde = ""
serde_json = ""
serde_derive = ""
rmp = "^0.8"
rmp-serde = "0.13.7"
rmp-serialize = "0.8.0"
rustc-serialize = ""
